Fixes missing color variables Moves css variables to root rather than body

--- a/src/webviews/apps/shared/base.scss
+++ b/src/webviews/apps/shared/base.scss
@@ -7,10 +7,8 @@ html {
 body {
 	background-color: var(--color-background);
 	color: var(--color-foreground);
-	font-family: var(--font-family);
 	height: 100%;
 	line-height: 1.4;
-	font-size: 100% !important;
 
 	&.scrollable,
 	.scrollable {
